Your commit message here

--- a/Quiz.html
+++ b/Quiz.html
@@ -15,17 +15,16 @@
 <body class="qz">
 
     <!-- Main container with Bootstrap grid and Flexbox for vertical alignment -->
-    <div class="container vh-100 d-flex flex-column justify-content-center align-items-center">
+    <div class="containerq vh-100 d-flex flex-column justify-content-center align-items-center">
         <!-- Buttons aligned vertically, one below another -->
-        <button class="btn btn-lg mb-3" style="background-color:#45a049; color: white;" onclick="cprog()">C</button>
-        <button class="btn btn-lg mb-3" style="background-color:#45a049; color: white;" onclick="javaprog()">JAVA</button>
-        <button class="btn btn-lg mb-3" style="background-color: #45a049; color: white;" onclick="db()">DBMS</button>
-        <button class="btn btn-lg mb-3" style="background-color: #45a049;; color: white;" onclick="html()">HTML</button>
-        <button class="btn btn-lg mb-3" style="background-color:#45a049;; color: white;" onclick="python()">PYTHON</button>
+        <button class="btn neon-btn btn-lg mb-3"  onclick="cprog()">C</button>
+        <button class="btn neon-btn btn-lg mb-3" onclick="javaprog()">JAVA</button>
+        <button class="btn neon-btn btn-lg mb-3"  onclick="db()">DBMS</button>
+        <button class="btn neon-btn btn-lg mb-3"  onclick="html()">HTML</button>
+        <button class="btn neon-btn btn-lg mb-3" onclick="python()">PYTHON</button>
     </div>
 
-    <!-- Falling stars container -->
-    <div class="stars"></div>
+    
 
     <!-- Bootstrap JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
