--- a/java.html
+++ b/java.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C Quiz</title>
     <link rel="stylesheet" href="cstyle.css">
-    <script src="c.js" defer></script> 
+    <script src="java.js" defer></script> 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 
 </head>
 <body>
-    <h1>C Programming Quiz</h1>
+    <h1>Oops Quiz</h1>
     <div id="quiz-container">
         <p id="question"></p>
         <div id="options"></div>
