--- a/c.html
+++ b/c.html
@@ -5,17 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C Quiz</title>
     <link rel="stylesheet" href="cstyle.css">
-    <script src="c.js" defer></script> 
+    <script src="c.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-
 </head>
 <body>
-    <h1>C Programming Quiz</h1>
-    <div id="quiz-container">
-        <p id="question"></p>
-        <div id="options"></div>
-    </div>
-    <button id="submitBtn">Submit Answer</button>
-    <p id="result"></p>
+    <header class="header">
+        <h1 class="quiz-title">C Programming Quiz</h1>
+    </header>
+    <main class="main">
+        <div id="quiz-container">
+            <p id="question"></p>
+            <div id="options" class="quiz-options"></div>
+        </div>
+        <button id="submitBtn" class="btn neon-btn">Submit Answer</button>
+        <p id="result" class="quiz-result"></p>
+    </main>
+    <footer class="footer">
+        <p>&copy; 2024 Quiz Master. All rights reserved.</p>
+    </footer>
 </body>
 </html>
