--- a/login.html
+++ b/login.html
@@ -6,13 +6,15 @@
     <title>Login - CODE QUIZzz</title>
     <link rel="icon" href="icon.jpeg">
     <link rel="stylesheet" href="login.css">
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
     <script src="script.js" defer></script>
 </head>
 <body class="login-page">
     <div class="login-form-container">
         <h2>Login to CODE QUIZzz</h2>
-        <form action="login-process.php" method="POST" onsubmit="return validateLoginForm()">
-            <input type="text" id="username" placeholder="Username" required>
+        <form id="loginForm" onsubmit="return validateLoginForm(event)">
+            <input type="email" id="email" placeholder="Email" required>
             <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
