--- a/login.html
+++ b/login.html
@@ -6,14 +6,12 @@
     <title>Login - CODE QUIZzz</title>
     <link rel="icon" href="icon.jpeg">
     <link rel="stylesheet" href="login.css">
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="script.js" defer></script>
+ 
 </head>
 <body class="login-page">
     <div class="login-form-container">
         <h2>Login to CODE QUIZzz</h2>
-        <form id="loginForm" onsubmit="return validateLoginForm(event)">
+        <form id="loginForm" onsubmit="validateLoginForm(event)">
             <input type="email" id="email" placeholder="Email" required>
             <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Login</button>
@@ -22,5 +20,13 @@
             <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
         </div>
     </div>
-</body>
+
+ 
+<script type="module" src="script.js"></script>
+
+<script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.1.2/firebase-app.js';
+    import { getAuth } from 'https://www.gstatic.com/firebasejs/9.1.2/firebase-auth.js';
+  </script>
+  </body>
 </html>
