--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code quiZzz</title>
-    <script src="script.js" defer></script>
+    
     <link rel="stylesheet" href="signup.css">
 </head>
 <body>
@@ -12,10 +12,13 @@
         <div class="container">
             <h1>Create Account</h1>
         <form id="signupForm">
+
             <input type="text" id="fullname" placeholder="Full Name" required>
-            <input type="email" id="email" placeholder="Email Address" required>
-            <input type="password" id="password" placeholder="Password" required>
-            <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
+            <input type="email" id="email" required autocomplete="username">
+     \
+            <input type="password" id="password" placeholder="Password" required autocomplete="new-password">
+<input type="password" id="confirmPassword" placeholder="Confirm Password" required autocomplete="new-password">
+
             <button type="submit">Sign Up</button>
         </form>
         <div class="link">
@@ -23,4 +26,12 @@
     </div>
     </div>
 </body>
+ 
+<script type="module" src="script.js"></script>
+
+<script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.1.2/firebase-app.js';
+    import { getAuth } from 'https://www.gstatic.com/firebasejs/9.1.2/firebase-auth.js';
+  </script>
+  
 </html>
